--- a/stories.html
+++ b/stories.html
@@ -58,7 +58,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=DQ5hv1mEd3MAX-t7qOJ&oh=c5cbb692e04271a8ef232ee6150af8d0&oe=5E963F96" alt="Қайрат Нұрсағатов" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=DQ5hv1mEd3MAX-t7qOJ&oh=4c78c254bef9ddc61eaea5a749860c83&oe=5EA36E96" alt="Қайрат Нұрсағатов" /></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</div>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -105,7 +105,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B9HG5z2HH5t" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=YCIUTXVC-fgAX-47VUL&oh=9077c76905af063c23596492c040982d&oe=5E956BA0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=7Ib3G_JOklAAX-5pnYA&oh=342e482bbdb1fd1d0188025d067a2c68&oe=5E956BA0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -115,7 +115,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B9HFP5wHjRx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/84316456_138359887703369_970209819145869941_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=64Zq0uoQeFMAX-PP03l&oh=00156ad3de6d763f0e4d7c6115f955b3&oe=5E9BC734" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/84316456_138359887703369_970209819145869941_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=TsKBhftQSvYAX8i_1hm&oh=5b2b44e8729f88540ae393ecf06e205c&oe=5E9BC734" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -125,7 +125,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YWKAlnPrv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2-7pQOX91kgAX8CggEM&oh=fe9209fe88722eaf81f663abaf31f1e1&oe=5EA72AB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2-7pQOX91kgAX8CggEM&oh=6f4ca9f7ef7b0f07169ca6e02e5fc576&oe=5EA72AB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -135,7 +135,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YWHkIHYUc" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=pNPjgKtQCxcAX-tBlrr&oh=0195247fd7fd662a63fbac6e3d8c9f6c&oe=5E96568A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=pNPjgKtQCxcAX-tBlrr&oh=5eccd634705e6d7ae4398cce7ebd5d31&oe=5EA3858A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -145,7 +145,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B8YVEuQnoXW" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7f_QU-AH78sAX_h3v-p&oh=08c41dc9559494b79f9aa235354ad330&oe=5E90FDDE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7f_QU-AH78sAX_h3v-p&oh=4b178b1066912f343a653f869c29708a&oe=5E9E2CDE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -155,7 +155,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6z25WRnleb" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=um4TwgFYXzsAX9chS62&oh=2e87c8607c6ab7a3147621e012b960ce&oe=5EA4BD25" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=jvcTp_52LDUAX_29q3O&oh=6eb6e9910f02af2bc010b8f75a058e6f&oe=5EA4BD25" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -165,7 +165,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6v_6N6nWD5" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=RaYnYLYgRmcAX_ppfOw&oh=efdfb383868215c1c25252fcdd30168a&oe=5EA61A81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=RaYnYLYgRmcAX_ppfOw&oh=85368ebe0cb422483c6c9a2eb387fe12&oe=5EA61A81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -175,7 +175,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rvshi-2oy-vzvod" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ZNuuUYG1pY0AX9zlfMK&oh=174c6562e01ca328e53bd5306c7a943e&oe=5E95689C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QyI-9nsqqwUAX_N60A9&oh=aa07c825a252db8f22110c31b4343a53&oe=5E95689C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -185,7 +185,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6XQlnGnymN" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ZZhahtTgbacAX_tJGOf&oh=882435ddbc4eeca7f06d531a80922dfa&oe=5E9C0157" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=jGHqKDny07cAX9LR2cI&oh=2d7b5d5a8365e1d5ee391f1af4bdb515&oe=5E9C0157" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -195,7 +195,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6VfhQuHFVw" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=5486d5987e2a54e189d06b08e0c7568d&oe=5E956348" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=1d2ed2158c4a1fe6cfee61c8b0b242a5&oe=5E956348" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -205,7 +205,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="magazin-zhenskoy-odezhdy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=BGRBMMWlIzgAX_siSyM&oh=49b8fd4e8954e95e5dce1419b5316ba1&oe=5E9C584B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=BGRBMMWlIzgAX_siSyM&oh=19d797067a5880769818beb974da2c08&oe=5E9C584B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -215,7 +215,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kukhni" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fzIGwN7xTS0AX-MukI1&oh=da4dcdce131ab457500025215ca180c8&oe=5EA595B5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=fzIGwN7xTS0AX-MukI1&oh=a69c79b4ef81a9ff33a81595253e8e6b&oe=5EA595B5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -225,7 +225,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="garderobnye-komnaty-so-shkafami" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=EYdxjQm3jJ0AX-UYM_M&oh=6676a93d139cb82abc1fbdc8881faeb9&oe=5E6ACDD0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=pmRYLPeqJ4cAX_PwEpS&oh=12c94515ec4b627f1a4d749e8b9fb1dc&oe=5E6C1F50" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -235,7 +235,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shakhmatshylar" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=jgs5ZEd_m_cAX_u7QQ7&oh=b75bc8dffb8cd4e6d150550442536109&oe=5E923B79" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=TFcEa0o3F9EAX-IDzaB&oh=f6e013bfa571a357283ff294a1c5ed71&oe=5E923B79" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -245,7 +245,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B2WrgpxFX-O" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=5zIG_LPe2foAX_W2rLP&oh=93d73a4a3c9699e347fd5d1a08d2e6e4&oe=5E900221" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lF7aBONE6QkAX8cjzMy&oh=0632a630516f580dae5b03cd492f2d73&oe=5E9D3121" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -255,7 +255,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MMcSFq5r" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=MQIOJfPuiHsAX_nAAzG&oh=3af6bca7e6f087c1a9d227cace8d04ed&oe=5E9D18A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IdBEdeofW7sAX_a2sAo&oh=16f3cbba0a5670a2407a93cb1dca860f&oe=5E9D18A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -265,7 +265,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MLyulQuj" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=KFL92BrpZ4kAX-Kti42&oh=9928d60df3813c24cbe94b89ebdf9d5e&oe=5E90243F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=KFL92BrpZ4kAX-Kti42&oh=667d4e07051176de5af115f558a7eed2&oe=5E9D533F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -275,7 +275,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0K9HXl4eW" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=T4EbAWNP2-QAX9pmH1t&oh=72e6d56a6f7e8f889277e6c2973df601&oe=5E970DD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=T4EbAWNP2-QAX9pmH1t&oh=8b2ef7cb580d68f877c2ea023321cd39&oe=5EA43CD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
