--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=DQ5hv1mEd3MAX-t7qOJ&oh=c5cbb692e04271a8ef232ee6150af8d0&oe=5E963F96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=DQ5hv1mEd3MAX-t7qOJ&oh=4c78c254bef9ddc61eaea5a749860c83&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -142,7 +142,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=pNPjgKtQCxcAX-tBlrr&oh=0195247fd7fd662a63fbac6e3d8c9f6c&oe=5E96568A" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=pNPjgKtQCxcAX-tBlrr&oh=5eccd634705e6d7ae4398cce7ebd5d31&oe=5EA3858A" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ZNuuUYG1pY0AX9zlfMK&oh=174c6562e01ca328e53bd5306c7a943e&oe=5E95689C" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QyI-9nsqqwUAX_N60A9&oh=aa07c825a252db8f22110c31b4343a53&oe=5E95689C" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -162,7 +162,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=5486d5987e2a54e189d06b08e0c7568d&oe=5E956348" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=1d2ed2158c4a1fe6cfee61c8b0b242a5&oe=5E956348" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -172,7 +172,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=YCIUTXVC-fgAX-47VUL&oh=9077c76905af063c23596492c040982d&oe=5E956BA0" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=7Ib3G_JOklAAX-5pnYA&oh=342e482bbdb1fd1d0188025d067a2c68&oe=5E956BA0" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,27 +182,17 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fzIGwN7xTS0AX-MukI1&oh=da4dcdce131ab457500025215ca180c8&oe=5EA595B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=fzIGwN7xTS0AX-MukI1&oh=a69c79b4ef81a9ff33a81595253e8e6b&oe=5EA595B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7f_QU-AH78sAX_h3v-p&oh=08c41dc9559494b79f9aa235354ad330&oe=5E90FDDE" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2-7pQOX91kgAX8CggEM&oh=fe9209fe88722eaf81f663abaf31f1e1&oe=5EA72AB2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=jGHqKDny07cAX9LR2cI&oh=2d7b5d5a8365e1d5ee391f1af4bdb515&oe=5E9C0157" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -212,10 +202,20 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=BGRBMMWlIzgAX_siSyM&oh=49b8fd4e8954e95e5dce1419b5316ba1&oe=5E9C584B" alt="Магазин женской одежды">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=BGRBMMWlIzgAX_siSyM&oh=19d797067a5880769818beb974da2c08&oe=5E9C584B" alt="Магазин женской одежды">
 									</div>
 									<div class="article-more__item-name" style="
 ">Магазин женской одежды</div>
+								</a>
+								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7f_QU-AH78sAX_h3v-p&oh=4b178b1066912f343a653f869c29708a&oe=5E9E2CDE" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
 								</a>
 							</div>
 						</div>
