--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=dE4fbQrC-9YAX-uFaOW&oh=6bba9b579fd1bbe0e94c81385febf3fc&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=029bC7sDnDkAX8YLrBI&oh=18f05a6f89a6322cdd316973bf39d776&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -187,16 +187,6 @@
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g6G8BNXj_U8AX--Hofa&oh=45d98b30969479174a5b6e5120cad210&oe=5E9C0157" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -207,15 +197,25 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=uk5lRr_poakAX_Ea3Ih&oh=6e67f0a5984943d59da1b7b6ea181ef2&oe=5EA72AB2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g6G8BNXj_U8AX--Hofa&oh=45d98b30969479174a5b6e5120cad210&oe=5E9C0157" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
+								</a>
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7cNRaKBSfIQAX95wes3&oh=f8d3bfadf9af880868aac2eb9672f5de&oe=5E9C584B" alt="Магазин женской одежды">
+									</div>
+									<div class="article-more__item-name" style="
+">Магазин женской одежды</div>
 								</a>
 							</div>
 						</div>
