--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=029bC7sDnDkAX8YLrBI&oh=18f05a6f89a6322cdd316973bf39d776&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=08yfhvK_KY8AX9bSsD8&oh=ddfa7de43dd30b54fc9d16a17562cdaa&oe=5EA36E96" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=M1NjBKtBidkAX-dh4cy&oh=020a714c73caa9bc6d3860cbbc6d2f3e&oe=5E9B28E4" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=M1NjBKtBidkAX-dh4cy&oh=4c8d5d80ddcd6524287aa0dbf3dff33a&oe=5E9F1D64" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -187,35 +187,35 @@
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7cNRaKBSfIQAX95wes3&oh=f8d3bfadf9af880868aac2eb9672f5de&oe=5E9C584B" alt="Магазин женской одежды">
-									</div>
-									<div class="article-more__item-name" style="
-">Магазин женской одежды</div>
-								</a>
-								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=b94c810j6K8AX_-Lltt&oh=22b3fd2797beb5d18c17d4b69fc519ef&oe=5E9E2CDE" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=TGl2EzVPuVoAX_NOvA0&oh=f578df78da60733b54bd384b1c802b70&oe=5EA72AB2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=FBgmhsZnY-wAX_nndRE&oh=27164bd93dce6cbb08033c4c32b4ad9d&oe=5EB459B2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
+								</a>
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=obAVrvSg9s8AX8IHvoa&oh=041d1af3fdea0dbcda545f8517744e65&oe=5E9C0157" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=2acd5568112eae03100ca9a286533a8a&oe=5E9C584B" alt="Магазин женской одежды">
+									</div>
+									<div class="article-more__item-name" style="
+">Магазин женской одежды</div>
 								</a>
 							</div>
 						</div>
