--- a/links.html
+++ b/links.html
@@ -187,15 +187,15 @@
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=FBgmhsZnY-wAX_nndRE&oh=27164bd93dce6cbb08033c4c32b4ad9d&oe=5EB459B2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=2acd5568112eae03100ca9a286533a8a&oe=5E9C584B" alt="Магазин женской одежды">
 									</div>
 									<div class="article-more__item-name" style="
-"></div>
+">Магазин женской одежды</div>
 								</a>
 								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -207,15 +207,15 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=AO4Iy8hmEIkAX8ZW8bK&oh=2acd5568112eae03100ca9a286533a8a&oe=5E9C584B" alt="Магазин женской одежды">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=b94c810j6K8AX_-Lltt&oh=03b373983bd016eea9a0268e04fb46ea&oe=5E9CF0A2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
-">Магазин женской одежды</div>
+"></div>
 								</a>
 							</div>
 						</div>
